assets/css/pages-style.css
/*
 *
 *		PAGES-STYLE.CSS
 *
 *	+ PAGE WRAPPER
 *	+ HEADER
 *	 - LOGO
 *	 - MENU
 *	 - MOBILE MENU
 * 	 - SOCIAL MEDIA
 *	 - SEARCH
 *	 - STICKY
 *	 - PAGE HEADER
 *	+ PAGE CONTENT
 *	+ FOOTER
 *	 - FOOTER
 *	 - FOOTER BOTTOM
 *  + PAGES
 *	 - HOME
 *	 - ABOUT
 *	 - SERVICES
 *	 - PORTFOLIO
 *	 - BLOG
 *	 - CONTACT
 *	 - SHORTCODES
 */

/***********************************************************************************
 *	+ PAGE WRAPPER
 ***********************************************************************************/
 
 	#main-container {
		overflow: hidden;
		background-color: #fff;
	}
 
/***********************************************************************************
 *	+ HEADER
 ***********************************************************************************/
 	
	#header-container {
		position: relative;
	}
	
	.header-boxed #header-container {
		margin: 20px 20px 0;
	}
	
	#header {
		position: absolute;
		z-index: 8010;
		top: 0;
		left: -15px;
		right: -15px;
		-webkit-transition: all 0.3s;
				transition: all 0.3s;
	}
	
	@media (min-width: 1600px) {
		
		.header-boxed #header-container {
			margin: 45px 45px 0;
		}
		
	}
	
	@media (min-width: 1200px) {
		
		#header {
			background: rgba(54, 57, 74, 0.5);
		}
		
	}
	
	@media (min-width: 768px) and (max-width: 1199px) {
		
		.header-boxed #header-container {
			margin: 20px 20px 0;
		}
		
		#header {
			position: relative;
			left: 0;
			margin: 0 -15px 0 -15px;
		}
		
		.header-boxed #header {
			margin-bottom: 15px;
		}
		
	}
	
	@media (max-width: 767px) {
		
		.header-boxed #header-container {
			margin: 15px 15px 0;
		}
		
		#header {
			position: relative;
			left: 0;
			margin: 0 -15px 0 -15px;
		}
		
		.header-boxed #header {
			margin-bottom: 15px;
		}
		
	}
	
/***********************************************************************************
 *	- LOGO
 ***********************************************************************************/

	#logo {
		max-width: 100%;
	}
	
	#logo a {
		display: inline-block;
		max-width: 100%;
		text-align: center;
	}
	
	@media (min-width: 1200px) {
		
		#header-sticky:not(.header-sticky) #logo {
			display: table;
    		height: 125px;
    		text-align: center;
		}
		#header-sticky:not(.header-sticky) #logo a {
			display: table-cell;
  			vertical-align: middle;
		}
	}
	
	@media (max-width: 767px) {
		
		#logo {
			margin-right: 60px;
		}
		
	}

/***********************************************************************************
 *	- MENU
 ***********************************************************************************/
 	
 	.menu,
	.menu ul {
		padding: 0;
		margin: 0;
		list-style: none;
	}
	
	.menu {
		float: right;
	}
	
	.menu > li { 
		float: left; 
		padding: 32px 0;
	}
	
	.menu li a {
		display: block;
		padding: 7px 20px 7px 30px;
		color: #fff;
		font-family: "Open Sans", Arial, sans-serif;
		font-size: 14px;
		line-height: 27px;
		-webkit-transition: all 0.3s;
				transition: all 0.3s;
	}
	
	.menu > li > a {
		position: relative;
		padding: 17px 10px 17px 10px;
		margin-right: 15px;
		color: #fff;
		font-family: "Montserrat", Arial, sans-serif;
		font-size: 15px;
		line-height: 27px;
		text-transform: uppercase;
		text-shadow: 1px 1px 3px #000;
	}
	
	#header-sticky .menu > li > a {
		text-shadow: none;
	}
	
	.menu > li:last-child > a {
		margin-right: 0;
	}
	
	.menu li.dropdown ul {
		position: absolute;
		z-index: 2000;
		top: 100%;
		left: 0;
		display: none;
		width: 230px;
		border: 1px solid #6e6e6e;
		background-color: #36394a;
	}
	
	.menu li.dropdown ul li a:before {
		position: relative;
		top: -1px;
		left: -15px;
		color: #6e6e6e;
		font-family: "FontAwesome";
		content: "\f105";
		-webkit-transition: all 0.3s;
				transition: all 0.3s;
	}
	
	.menu li.dropdown ul ul {
		top: -1px;
		left: 100%;
	}
	
	.menu li.dropdown:hover > ul {
		display: block;
	}
	
	.menu li.megamenu .megamenu-container {
		position: absolute;
		z-index: 2000;
		top: 100%;
		left: 0;
		display: none;
		width: 100%;
		border: 1px solid #6e6e6e;
		margin-left: -15px;
		background-color: #36394a;
	}
	
	.megamenu-container .section {
		float: left;
		width: 25%;
		border-right: 1px solid #6e6e6e;
	}
	
	.megamenu-container .section:last-child {
		border-right: none;
	}
	
	.megamenu-container.col-2 .section { 
		width: 50%; 
	}
	
	.megamenu-container.col-3 .section { 
		width: 33.33333333%; 
	}
	
	.megamenu-container.col-4 .section { 
		width: 25%; 
	}
	
	.megamenu-container.col-5 .section { 
		width: 20%; 
	}
	
	.menu li.megamenu:hover > .megamenu-container { 
		display: block; 
	}
	
	.megamenu-container .section > ul li a:before {
		position: relative;
		top: -1px;
		left: -15px;
		color: #6e6e6e;
		font-family: "FontAwesome";
		content: "\f105";
		-webkit-transition: all 0.3s;
				transition: all 0.3s;
	}
	
	.sf-arrows .sf-with-ul:after {
		position: absolute;
		top: 50%;
		right: 0;
		display: none;
		width: 0;
		height: 0;
		border: 5px solid transparent;
		border-top-color: #fff;
		margin-top: -2.5px;
		content: "";
		-webkit-transition: all 0.3s;
				transition: all 0.3s;
	}
		
	.sf-arrows > li:hover > .sf-with-ul:after { 
		border-top-color: #99d4b4; 
	}
		
	.sf-arrows ul .sf-with-ul:after {
		display: block;
		border-color: transparent;
		border-left-color: #fff;
		margin-top: -5px;
		margin-right: 10px;
	}
	
	.sf-arrows ul li:hover > .sf-with-ul:after { 
		border-left-color: #fff; 
	}
	
	.menu li a:hover, 
	.menu li.active > a, 
	.menu li.sfHover > a {
		text-decoration: none;
		color: #99d4b4;
	}
	
	.menu li.special-active > a {
		text-decoration: none;
		color: #e94e1d !important;
		border-top: 1px solid #e94e1d;
		border-bottom: 1px solid #e94e1d;
		font-weight: bold;
		padding-top: 16px;
    	padding-bottom: 16px;
    	text-shadow: 1px 1px 1px #000;
	}
	#header-sticky .menu li.special-active > a {
		text-shadow: none;
	}
	
	.menu li.dropdown ul li a:hover:before,
	.menu li.dropdown ul li.sfHover a:before, 
	.megamenu-container .section > ul li a:hover:before {
		color: #fff;
	}
/* ... */

